--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ images/summary-unikernel.png
 images/tinyml-infra.png
 images/training-uc.png
 images/unikernel-mindmap.png
+images/summary-3enablers.png
+images/summary-mlcompiler.png
+
