color change && refine story

--- a/.gitignore
+++ b/.gitignore
@@ -4,21 +4,13 @@ images/demo-ac.png
 images/demo-sq.png
 images/demo-sq0.png
 images/demo-uc.png
-images/ecosystem.png
-images/ecosystem_001.png
-images/ecosystem_002.png
-images/ecosystem_003.png
-images/ecosystem_004.png
-images/ecosystem_005.png
-images/ecosystem_006.png
-images/ecosystem_007.png
-images/ecosystem_008.png
+images/ecosystem*png
 images/ps-sq.png
 images/summary-problem.png
 images/summary-proposal.png
 images/summary-unikernel.png
 images/tinyml-infra.png
-images/training-uc.png
+images/training-uc*.png
 images/unikernel-mindmap.png
 images/summary-3enablers.png
 images/summary-mlcompiler.png
