move demo at first

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ images/convert-uc.png
 images/demo-ac.png
 images/demo-sq.png
 images/demo-sq0.png
-images/demo-uc.png
+images/demo-uc*.png
 images/ecosystem*png
 images/ps-sq.png
 images/summary-problem.png
