--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,6 @@ images/training-uc*.png
 images/unikernel-mindmap.png
 images/summary-3enablers.png
 images/summary-mlcompiler.png
+images/runtime.png
+
 
