--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@ images/training-uc*.png
 images/unikernel-mindmap.png
 images/summary-3enablers.png
 images/summary-mlcompiler.png
-images/runtime.png
+images/runtime*.png
 
 
