Unify inference.png

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,4 @@ images/unikernel-mindmap.png
 images/summary-3enablers.png
 images/summary-mlcompiler.png
 images/runtime*.png
-
-
+images/inference.png
