--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 *~
 images/convert-uc.png
-images/demo-ac.png
-images/demo-sq.png
-images/demo-sq0.png
-images/demo-uc*.png
+images/demo*.png
 images/ecosystem*png
 images/ps-sq.png
 images/summary-problem.png
