big 3 enablers summary

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ images/summary-unikernel.png
 images/tinyml-infra.png
 images/training-uc*.png
 images/unikernel-mindmap.png
-images/summary-3enablers.png
+images/summary-3enablers*.png
 images/summary-mlcompiler.png
 images/runtime*.png
 images/inference.png
