--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ images/tmlaas.png
 images/mxe.png
 images/standard*.png
 images/arch*.png
+images/demo.png
+images/ecosystem_last.png
 5grbs.pdf
 backporting.pdf
 
