--- a/.gitignore
+++ b/.gitignore
@@ -1,80 +1,2 @@
 *~
-images/convert-uc.png
-images/demo*.png
-images/ecosystem*png
-images/ps-sq.png
-images/summary-problem.png
-images/summary-proposal.png
-images/summary-unikernel.png
-images/tinyml-infra.png
-images/training-uc*.png
-images/unikernel-mindmap.png
-images/summary-3enablers*.png
-images/summary-mlcompiler.png
-images/runtime*.png
-images/inference.png
-images/tmlaas.png
-images/mxe.png
-images/standard*.png
-images/arch*.png
-images/demo.png
-images/ecosystem_last.png
-5grbs.pdf
-backporting.pdf
-
-images/arch.png
-images/arch_001.png
-images/arch_002.png
-images/arch_003.png
-images/arch_004.png
-images/convert-uc.png
-images/demo-ac.png
-images/demo-sq.png
-images/demo-sq0.png
-images/demo-uc.png
-images/demo-uc_001.png
-images/demo.png
-images/ecosystem.png
-images/ecosystem_001.png
-images/ecosystem_002.png
-images/ecosystem_003.png
-images/ecosystem_004.png
-images/ecosystem_005.png
-images/ecosystem_006.png
-images/ecosystem_007.png
-images/ecosystem_008.png
-images/ecosystem_009.png
-images/ecosystem_010.png
-images/ecosystem_011.png
-images/ecosystem_012.png
-images/ecosystem_013.png
-images/ecosystem_014.png
-images/ecosystem_015.png
-images/ecosystem_016.png
-images/ecosystem_017.png
-images/ecosystem_last.png
-images/etarget.png
-images/inference.png
-images/mxe.png
-images/ps-sq.png
-images/runtime.png
-images/runtime_001.png
-images/standard-mindmap.png
-images/standard-mindmap_001.png
-images/standard.png
-images/standard_001.png
-images/standard_002.png
-images/standard_003.png
-images/summary-3enablers.png
-images/summary-3enablers_001.png
-images/summary-mlcompiler.png
-images/summary-problem.png
-images/summary-proposal.png
-images/summary-unikernel.png
-images/tinyml-infra.png
-images/tmlaas.png
-images/training-uc.png
-images/training-uc_001.png
-images/training-uc_002.png
-images/training-uc_003.png
-images/unikernel-mindmap.png
+images/*.png
